# UNI-C-COMPILER

./: .gitignore  CMakeLists.txt  CMakePresets.json  Documentation.md  ISSUES.md  Lexer_Design.md  Parser_Design.md  README.md
.github/workflows/: ci.yml  release.yml
scripts/: setup.sh
src/: CMakeLists.txt  main.cpp
src/common/: Ast.cpp  Ast.h  CMakeLists.txt  SymbolEntry.cpp  SymbolEntry.h  SymbolTable.cpp  SymbolTable.h  Token.cpp  Token.h  Type.cpp  Type.h
src/gui/: CMakeLists.txt  GUI.cpp  GUI.h  LexerPanel.cpp  LexerPanel.h  MainWindow.cpp  MainWindow.h  ParserPanel.cpp  ParserPanel.h
src/lexer/: CMakeLists.txt  CharStream.cpp  CharStream.h  Lexer.cpp  Lexer.h  LexerError.cpp  LexerError.h  ReservedWords.cpp  ReservedWords.h  TokenClassifier.cpp  TokenClassifier.h
src/parser/: CMakeLists.txt  ParseError.cpp  ParseError.h  ParseTree.cpp  ParseTree.h  Parser.cpp  Parser.h  ParserClassifier.cpp  ParserClassifier.h  TokenStream.cpp  TokenStream.h
tests/lexer/: CMakeLists.txt  basic.c  comments.c  control_flow.c  errors.c  keywords.c  operators.c  test_lexer.cpp
tests/parser/: CMakeLists.txt  declarations.c  errors.c  expressions.c  statements.c  test_parser.cpp
